--- a/index.html
+++ b/index.html
@@ -1,152 +1,244 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Lace Hotpants — Mocha Modest</title>
-  <meta name="description" content="lace hotpants — Hotpants boxer super jumbo. Lembut, adem, nyaman untuk sehari-hari." />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Lace Hotpants by Vita</title>
   <style>
-    :root{
-      --bg:#F6F1EC;
-      --card:#FFFDFB;
-      --mocha:#A67C58;
-      --muted:#7A6A5A;
-      --accent:#F1DED0;
-      --radius:14px;
-      --shadow:0 10px 30px rgba(80,60,40,0.08);
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background-color: #fdf8f6;
+      color: #5a4636;
+      overflow-x: hidden;
     }
-    *{box-sizing:border-box;margin:0;padding:0}
-    body{font-family:'Poppins',sans-serif;background:var(--bg);color:#333;line-height:1.6}
-    .wrap{max-width:440px;margin:0 auto;padding:16px}
-    .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);margin-bottom:18px;overflow:hidden}
-    .section{padding:16px}
-    .hero img{width:100%;display:block;height:auto}
-    h1{font-size:22px;color:var(--mocha);margin-bottom:8px}
-    .lead{color:var(--muted);font-size:14px;margin-bottom:10px}
-    .desc{font-size:14px;margin-bottom:12px}
-    .sizes{display:grid;grid-template-columns:1fr 1fr;gap:8px}
-    .size{background:linear-gradient(180deg,var(--accent),#fff);padding:10px;border-radius:10px;border:1px solid rgba(160,130,100,0.06)}
-    .size b{color:var(--mocha);display:block;margin-bottom:4px}
-    .details h3{color:var(--mocha);margin-bottom:8px}
-    .details ul{margin-left:16px}
-    .details li{margin-bottom:6px}
-    .gallery{display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-top:10px}
-    .gallery img{width:100%;border-radius:10px}
-    .caption{text-align:center;font-size:13px;color:var(--muted);margin-top:4px}
-    .bubble{background:#fff;padding:12px;border-radius:12px;border:1px solid rgba(160,130,110,0.05);margin-bottom:10px}
-    .bubble .name{font-weight:700;color:var(--mocha);margin-bottom:4px}
-    .bubble .text{font-size:14px}
-    .pricing{text-align:center;background:linear-gradient(180deg,#fff,#FDF6F0);padding:14px;border-radius:10px;border:1px solid rgba(160,130,100,0.06);margin-top:12px}
-    .promo-img{margin-top:12px;position:relative}
-    .promo-img img{width:100%;border-radius:10px}
-    .promo-badge{position:absolute;left:10px;top:10px;background:var(--mocha);color:#fff;padding:6px 12px;border-radius:999px;font-weight:700;font-size:12px;box-shadow:0 6px 20px rgba(100,60,30,0.12)}
-    .embed{background:linear-gradient(180deg,#fff,#FFF6F2);padding:14px;border-radius:12px;border:1px solid rgba(160,130,100,0.06);margin-top:14px}
-    .embed h3{color:var(--mocha);font-size:16px;margin-bottom:8px;text-align:center}
-    footer{text-align:center;font-size:13px;color:var(--muted);margin-top:20px;padding-bottom:20px}
-    .fade{opacity:0;transform:translateY(10px);transition:opacity .6s ease,transform .6s ease}
-    .fade.show{opacity:1;transform:none}
+
+    header {
+      text-align: center;
+      padding: 4rem 1rem 2rem;
+      background-color: #f5ebe6;
+    }
+
+    header h1 {
+      font-size: 2rem;
+      color: #3d2c23;
+      font-weight: 600;
+      margin-bottom: 1rem;
+    }
+
+    header p {
+      color: #7b665a;
+      font-size: 1rem;
+      max-width: 480px;
+      margin: 0 auto;
+    }
+
+    .hero {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 1rem;
+    }
+
+    .hero img {
+      width: 100%;
+      max-width: 600px;
+      border-radius: 1.5rem;
+      object-fit: cover;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
+    }
+
+    .section {
+      text-align: center;
+      padding: 3rem 1.5rem;
+    }
+
+    .section h2 {
+      font-size: 1.6rem;
+      margin-bottom: 1rem;
+      color: #3d2c23;
+    }
+
+    .section p {
+      font-size: 1rem;
+      color: #6f5b4e;
+      max-width: 600px;
+      margin: 0 auto;
+      line-height: 1.6;
+    }
+
+    .card {
+      background: #f9f3ef;
+      margin: 2rem auto;
+      max-width: 700px;
+      padding: 2rem;
+      border-radius: 1rem;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem;
+      font-size: 0.9rem;
+      color: #9c8b7a;
+    }
+
+    /* Fade-in animation */
+    .fade-in {
+      opacity: 0;
+      transform: translateY(30px);
+      transition: opacity 1s ease, transform 1s ease;
+    }
+
+    .fade-in.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 1.6rem;
+      }
+      .section h2 {
+        font-size: 1.4rem;
+      }
+      .card {
+        margin: 1.5rem 1rem;
+        padding: 1.5rem;
+      }
+    }
   </style>
 </head>
+
 <body>
-  <div class="wrap">
+  <header>
+    <h1>Lace Hotpants by Vita</h1>
+    <p>Koleksi elegan & feminin yang dirancang untuk kenyamanan dan keanggunan setiap hari.</p>
+  </header>
 
-    <div class="card hero fade">
-      <img src="https://down-id.img.susercontent.com/file/id-11134207-7ra0q-mdiw8w9hn8um61.webp" alt="lace hotpants - hero">
-    </div>
+  <section class="hero">
+    <img src="https://images.unsplash.com/photo-1614289373157-44a03f90a7ba?auto=format&fit=crop&w=800&q=80" alt="Lace Hotpants" />
+  </section>
 
-    <div class="card section fade">
-      <h1>Lace Hotpants</h1>
-      <p class="lead">Celana dalam wanita model hotpants boxer super jumbo. Lembut, adem, dan nyaman untuk aktivitas harian.</p>
-      <p class="desc">Terbuat dari bahan premium yang elastis dan lembut, memberi kenyamanan maksimal sepanjang hari.</p>
-    </div>
+  <section class="section">
+    <h2>Sentuhan Lembut & Mewah</h2>
+    <p>Lace Hotpants ini terbuat dari bahan berkualitas tinggi dengan detail renda lembut. 
+    Tampil percaya diri dengan kenyamanan yang elegan — feminin, lembut, dan modern.</p>
+  </section>
 
-    <div class="card section fade">
-      <div class="embed">
-        <h3>Form Pemesanan</h3>
-
-        <!-- OrderOnline Embed Code - v8.0.4 -->
-        <div class="ooef">
-          <form class="orderonline-embed-form"
-                data-username="vita"
-                data-product-slug="lace-hotpants"
-                data-product-id="68f7981c1e10e6aa540abcea"
-                id="oo-embed-form-lace-hotpants-6338"
-                data-origin="orderonline">
-            <div class="ooef-loader">
-              <style>
-                .ooef-loader{visibility:hidden;opacity:0;position:absolute;left:0;right:0;top:0;bottom:0;display:flex;justify-content:center;align-items:center;flex-direction:column;animation:ooLoadingIn 10s ease;-webkit-animation:ooLoadingIn 10s ease;animation-fill-mode:forwards;overflow:hidden}
-                @keyframes ooLoadingIn{0%{visibility:hidden;opacity:0}20%{visibility:visible;opacity:0}100%{visibility:visible;opacity:1}}
-                @-webkit-keyframes ooLoadingIn{0%{visibility:hidden;opacity:0}20%{visibility:visible;opacity:0}100%{visibility:visible;opacity:1}}
-                .ooef-loader>div,.ooef-loader>div:after{border-radius:50%;width:2.5rem;height:2.5rem}
-                .ooef-loader>div{font-size:10px;position:relative;text-indent:-9999em;border:.25rem solid #f5f5f5;border-left:.25rem solid #55c4cf;-webkit-transform:translateZ(0);-ms-transform:translateZ(0);transform:translateZ(0);-webkit-animation:ooLoading 1.1s infinite linear;animation:ooLoading 1.1s infinite linear}
-                .ooef-loader.error>div{border-left:.25rem solid #ff4500;animation-duration:5s}
-                @-webkit-keyframes ooLoading{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}
-                @keyframes ooLoading{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}
-              </style>
-              <div aria-live="polite" role="status"><div>Loading...</div></div>
-            </div>
-          </form>
-        </div>
-        <script>
-          if (typeof xLogError != 'function') {
-            var xLogError = function (error) {
-              var req = new XMLHttpRequest();
-              var payload = JSON.stringify({ url: document.location.href, line: error.line, stack: error.stack });
-              var params = 'message=' + encodeURIComponent(error.name) + '&payload=' + encodeURIComponent(payload) + '&type=embed&level=error';
-              req.open('POST', 'https://api.orderonline.id/log', true);
-              req.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
-              req.send(params);
-            };
-          }
-          try {
-            if (typeof xEmbedScript != 'function') {
-              var xEmbedScript = function () {
-                !function(w, d, e, v, id, t, s) {
-                  if (d.getElementById(id)) return;
-                  t = d.createElement(e); t.async = !0; t.src = v; t.id = id;
-                  s = d.getElementsByTagName(e)[0];
-                  s.parentNode.insertBefore(t, s);
-                }(window, document, 'script', 'https://cdn.orderonline.id/js/embed-v2-slim.min.js?v=8.0.4', 'oo-embed-js');
-              };
-            }
-            if (typeof xEmbedInit != 'function') {
-              var xEmbedInit = function (w, n) {
-                if (w.ooe) return;
-                n = w.ooe = function() { n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments) };
-                if (!w._ooe) w._ooe = n;
-                n.push = n; n.loaded = !0; n.version = '8.0.4'; n.queue = [];
-              };
-            }
-            xEmbedInit(window);
-            ooe('setup', 'redirect', 'https://vita.orderonline.id');
-            ooe('init', '5f1a8627a9bf8058b0424f32', '68f7981c1e10e6aa540abcea', '68f7981c1e10e6aa540abceb', 'oo-embed-form-lace-hotpants-6338', {"mode":"page","action":"Klik untuk pemesanan","title":"Form Pemesanan","triggerPixel":false,"triggerGtm":false});
-            if (!window.jQuery) {
-              !function(w, d, e, v, id, t, s) {
-                if (d.getElementById(id)) return;
-                t = d.createElement(e); t.async = !0; t.src = v; t.id = id;
-                t.addEventListener('load', xEmbedScript);
-                s = d.getElementsByTagName(e)[0];
-                s.parentNode.insertBefore(t, s);
-              }(window, document, 'script', 'https://cdn.orderonline.id/js/vendor/jquery.min.js', 'oo-embed-jquery');
-            } else { xEmbedScript(); }
-          } catch (e) { xLogError(e); throw e; }
-        </script>
-        <!-- End OrderOnline Embed Code -->
-
+  <section id="form-section" class="section fade-in">
+    <h2>✨ Form Pemesanan Lace Hotpants ✨</h2>
+    <div class="card">
+      <!-- OrderOnline Embed Code - v8.0.4 -->
+      <div class="ooef">
+        <form class="orderonline-embed-form"
+          data-username="vita"
+          data-product-slug="lace-hotpants"
+          data-product-id="68f7981c1e10e6aa540abcea"
+          id="oo-embed-form-lace-hotpants-6338"
+          data-origin="orderonline">
+          <div class="ooef-loader">
+            <style>
+              .ooef-loader{visibility:hidden;opacity:0;position:absolute;left:0;right:0;top:0;bottom:0;display:flex;justify-content:center;align-items:center;flex-direction:column;animation:ooLoadingIn 10s ease;-webkit-animation:ooLoadingIn 10s ease;animation-fill-mode:forwards;overflow:hidden}
+              @keyframes ooLoadingIn{0%{visibility:hidden;opacity:0}20%{visibility:visible;opacity:0}100%{visibility:visible;opacity:1}}
+              @-webkit-keyframes ooLoadingIn{0%{visibility:hidden;opacity:0}20%{visibility:visible;opacity:0}100%{visibility:visible;opacity:1}}
+              .ooef-loader>div,.ooef-loader>div:after{border-radius:50%;width:2.5rem;height:2.5rem}
+              .ooef-loader>div{font-size:10px;position:relative;text-indent:-9999em;border:.25rem solid #f5f5f5;border-left:.25rem solid #55c4cf;-webkit-transform:translateZ(0);-ms-transform:translateZ(0);transform:translateZ(0);-webkit-animation:ooLoading 1.1s infinite linear;animation:ooLoading 1.1s infinite linear}
+              .ooef-loader.error>div{border-left:.25rem solid #ff4500;animation-duration:5s}
+              @-webkit-keyframes ooLoading{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}
+              @keyframes ooLoading{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}
+            </style>
+            <div aria-live="polite" role="status"><div>Loading...</div></div>
+          </div>
+        </form>
       </div>
     </div>
+  </section>
 
-    <footer>© <span id="year"></span> Vita • Mocha Modest</footer>
-  </div>
+  <footer>
+    &copy; 2025 Vita Collection – Semua hak cipta dilindungi.
+  </footer>
 
   <script>
-    document.addEventListener('DOMContentLoaded',function(){
-      const io=new IntersectionObserver(entries=>{
-        entries.forEach(e=>{if(e.isIntersecting){e.target.classList.add('show');io.unobserve(e.target)}})
-      },{threshold:0.1});
-      document.querySelectorAll('.fade').forEach(el=>io.observe(el));
-      document.getElementById('year').textContent=new Date().getFullYear();
+    // Lazy-load OrderOnline form
+    document.addEventListener("DOMContentLoaded", () => {
+      const section = document.getElementById("form-section");
+
+      const observer = new IntersectionObserver((entries, obs) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            section.classList.add("visible");
+
+            // Jalankan script OrderOnline
+            if (typeof xLogError != 'function') {
+              var xLogError = function (error) {
+                var req = new XMLHttpRequest();
+                var payload = JSON.stringify({ url: document.location.href, line: error.line, stack: error.stack });
+                var params = 'message=' + encodeURIComponent(error.name) + '&payload=' + encodeURIComponent(payload) + '&type=embed&level=error';
+                req.open('POST', 'https://api.orderonline.id/log', true);
+                req.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
+                req.send(params);
+              };
+            }
+            try {
+              if (typeof xEmbedScript != 'function') {
+                var xEmbedScript = function () {
+                  !function(w, d, e, v, id, t, s) {
+                    if (d.getElementById(id)) return;
+                    t = d.createElement(e);
+                    t.async = !0;
+                    t.src = v;
+                    t.id = id;
+                    s = d.getElementsByTagName(e)[0];
+                    s.parentNode.insertBefore(t, s);
+                  }(window, document, 'script', 'https://cdn.orderonline.id/js/embed-v2-slim.min.js?v=8.0.4', 'oo-embed-js');
+                };
+              }
+              if (typeof xEmbedInit != 'function') {
+                var xEmbedInit = function (w, n) {
+                  if (w.ooe) return;
+                  n = w.ooe = function() { n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments) };
+                  if (!w._ooe) w._ooe = n;
+                  n.push = n;
+                  n.loaded = !0;
+                  n.version = '8.0.4';
+                  n.queue = [];
+                };
+              }
+              xEmbedInit(window);
+              ooe('setup', 'redirect', 'https://vita.orderonline.id');
+              ooe('init', '5f1a8627a9bf8058b0424f32', '68f7981c1e10e6aa540abcea', '68f7981c1e10e6aa540abceb', 'oo-embed-form-lace-hotpants-6338', {
+                "mode": "page",
+                "action": "Klik untuk pemesanan",
+                "title": "Form Pemesanan",
+                "triggerPixel": false,
+                "triggerGtm": false
+              });
+              if (!window.jQuery) {
+                !function(w, d, e, v, id, t, s) {
+                  if (d.getElementById(id)) return;
+                  t = d.createElement(e);
+                  t.async = !0;
+                  t.src = v;
+                  t.id = id;
+                  t.addEventListener('load', xEmbedScript);
+                  s = d.getElementsByTagName(e)[0];
+                  s.parentNode.insertBefore(t, s);
+                }(window, document, 'script', 'https://cdn.orderonline.id/js/vendor/jquery.min.js', 'oo-embed-jquery');
+              } else {
+                xEmbedScript();
+              }
+            } catch (e) {
+              xLogError(e);
+              throw e;
+            }
+
+            obs.unobserve(section);
+          }
+        });
+      }, { threshold: 0.4 });
+
+      observer.observe(section);
     });
   </script>
 </body>
